# Mini-Agent-Orchestrator

./: .env.example  .gitignore  README.md  requirements.txt  start.sh
app/: main.py  orchestrator.py  planner.py  schemas.py  tools.py
mini-agent-orchestrator/: .env.example  .gitignore  README.md  pyproject.toml  start.sh
mini-agent-orchestrator/app/: main.py
mini-agent-orchestrator/app/api/: routes.py
mini-agent-orchestrator/app/core/: config.py
mini-agent-orchestrator/app/models/: schemas.py
mini-agent-orchestrator/app/services/: agent_service.py  llm_service.py  tools.py
mini-agent-orchestrator/app/static/: app.js  index.html  styles.css
mini-agent-orchestrator/tests/: test_api.py
